[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "drive"
authors = [{name = "Frappe Technologies Pvt. Ltd.", email = "developers@frappe.io"}]
description = "100% open source file storage, sharing, and collaboration"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Communications :: File Sharing",
    "Topic :: System :: Archiving",
]
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0-dev",
    # File Processing and Compression
    "zipfile36~=0.1.3",
    "py7zr~=0.20.8",
    "rarfile~=4.1",
    # Image Processing
    "Pillow~=10.1.0",
    "opencv-python~=4.8.1",
    "imageio~=2.33.0",
    # Document Processing
    "python-docx~=1.1.0",
    "openpyxl~=3.1.2",
    "xlrd~=2.0.1",
    "PyPDF2~=3.0.1",
    "python-pptx~=0.6.23",
    # Media Processing
    "mutagen~=1.47.0",
    "moviepy~=1.0.3",
    # Cloud Storage Integrations
    "boto3~=1.34.0",
    "google-cloud-storage~=2.10.0",
    "dropbox~=11.36.2",
    # Utilities
    "python-dateutil~=2.8.2",
    "markupsafe~=2.1.3",
    "validators~=0.22.0",
    "python-magic~=0.4.27",
    # Docker specific additions
    "gevent~=23.9.1",
    "psycopg2-binary~=2.9.9",
    "supervisor~=4.2.5",
    "gunicorn~=21.2.0",
]

[project.optional-dependencies]
dev = [
    "coverage~=7.3.2",
    "Faker~=20.1.0",
    "hypothesis~=6.88.4",
    "unittest-xml-reporting~=3.2.0",
]

[project.urls]
Homepage = "https://frappe.io/drive"
Documentation = "https://docs.frappe.io/drive"
Repository = "https://github.com/alazab-group/drive"
Changelog = "https://github.com/alazab-group/drive/releases"

[project.scripts]
drive = "drive.utils.bench_helper:main"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - too broad
    "B018", # useless expression
    "B023", # function definition in loop
    "B904", # raise ... from e
    "E501", # line too long
    "F401", # module imported but unused
    "F403", # star import used
    "F405", # name may be undefined due to star import
    "RUF012", # mutable class attributes
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.coverage.run]
source = ["drive"]
omit = [
    "*/tests/*",
    "*/commands/*",
    "*/patches/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
